added docker task